AGENTS.mdにPowerShellで文字化けしない秘訣を追記
- UTF-8ラッパーの利用、OutputEncoding設定、JAVA_TOOL_OPTIONS/GRADLE_OPTSの例を記載

- ファイル入出力時のUTF-8指定と典型原因の回避策を整理